--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,12 @@
 @import "primeng/resources/primeng.css";
 @import "primeicons/primeicons.css";
 
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font-family: var(--font-family);
 }
