--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import "primeng/resources/themes/lara-dark-blue/theme.css";
+@import '/node_modules/primeflex/primeflex.css';
 @import "primeng/resources/primeng.css";
 @import "primeicons/primeicons.css";
 
