--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -11,16 +11,25 @@
         >Create today!</a
       >
     </div>
-
-    <div>
-      <label for="email1" class="block text-900 font-medium mb-2">Email</label>
+    <form [formGroup]="signInForm" (ngSubmit)="signInForm.valid && onSubmit()">
+      <label for="email1" class="block text-900 font-medium">Email</label>
       <input
         id="email1"
         type="text"
         placeholder="Email address"
+        icon="pi pi-user"
         pInputText
+        formControlName="email"
         class="w-full mb-3"
       />
+      <small
+        id="username-help"
+        *ngIf="
+          signInForm.get('email')?.invalid && signInForm.get('email')?.touched
+        "
+        class="p-error block font-medium mb-4"
+        >Please insert a valid e-mail.</small
+      >
 
       <label for="password1" class="block text-900 font-medium mb-2"
         >Password</label
@@ -29,9 +38,20 @@
         id="password1"
         type="password"
         placeholder="Password"
+        icon="pi pi-lock"
         pInputText
+        formControlName="password"
         class="w-full mb-3"
       />
+      <small
+        id="password-help"
+        *ngIf="
+          signInForm.get('password')?.invalid &&
+          signInForm.get('password')?.touched
+        "
+        class="p-error block font-medium mb-4"
+        >Your password must contain at least 6 characters.</small
+      >
 
       <div class="flex align-items-center justify-content-between mb-6">
         <a
@@ -40,13 +60,12 @@
         >
       </div>
 
-      <button
-        pButton
-        pRipple
+      <p-button
+        [loading]="loading"
+        type="submit"
         label="Sign In"
-        icon="pi pi-user"
-        class="w-max mx-auto block"
-      ></button>
-    </div>
+        class="w-max mx-auto flex"
+      ></p-button>
+    </form>
   </div>
 </div>
